--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Articles</h1>
 
-<p>A list of all of the articles on the site. Who needs pagination!</p>
+<p>Nutz!</p>
 
 <ul>
   <% @articles.each do |article| %>
